feat: add image to ./hero-section.html

--- a/02-branch-marge-conflicts/hero-section.html
+++ b/02-branch-marge-conflicts/hero-section.html
@@ -4,4 +4,5 @@
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit vitae
     assumenda modi, distinctio id voluptatum dolorum qui numquam est vero.
   </p>
+  <img src="./branch.png" alt="">
 </section>
